# br-energy-credit-monitor

./: .gitignore  CLAUDE.md  README.md  data.js  pyproject.toml
.github/workflows/: refresh.yml
bpcm/: __init__.py  cli.py  config.py  export_dashboard.py  ingest.py  manifest.py  marts.py  quality.py  sources.py  stage.py  transforms.py
dashboard/: app.js  data.js  index.html  styles.css
data/marts/: mart_plant_monthly.parquet
docs/: PLATFORM_SPEC.md
queries/: top_curtailed_plants.sql
scripts/: build_data.sh
tests/: test_transforms.py
